tests/snapshots/run_wpt_conformance__coreml_where_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float32 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type select: Param 'cond' has incorrect type for operator 'select'. Expected { [...]>, tensor<bool }; got tensor<uint8, [24]>.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[24] @bytes([241, 0, 85, 0, 227, 51, 202, 0, 104, 227, 129, 129, 175, 134, 130, 140, 103, 46, 158, 17, 0, 41, 94, 0]);
    operand_1: f32[24] @bytes([150, 226, 180, 66, 77, 135, 133, 66, 5, 76, 31, 194, 33, 119, 173, 193, 157, 176, 134, 194, 19, 215, 57, 194, 216, 160, 95, 194, 99, 37, 131, 66, 254, 146, 12, 66, 46, 96, 63, 65, 70, 78, 153, 66, 54, 247, 114, 66, 185, 221, 187, 194, 137, 45, 243, 193, 209, 66, 9, 66, 224, 174, 246, 64, 125, 120, 164, 194, 149, 62, 182, 66, 169, 127, 183, 65, 202, 244, 149, 66, 201, 4, 151, 65, 130, 64, 121, 66, 234, 119, 67, 66, 246, 213, 150, 194]);
    operand_2: f32[24] @bytes([4, 139, 140, 66, 31, 251, 179, 66, 54, 129, 196, 191, 108, 138, 167, 194, 14, 198, 236, 65, 249, 106, 20, 194, 65, 57, 213, 192, 130, 78, 166, 194, 214, 243, 180, 194, 1, 226, 53, 194, 240, 141, 73, 66, 15, 11, 58, 66, 22, 3, 62, 66, 221, 170, 175, 193, 91, 152, 43, 66, 13, 167, 153, 194, 147, 1, 134, 66, 130, 99, 32, 66, 243, 165, 232, 193, 156, 14, 67, 193, 128, 185, 45, 193, 145, 107, 186, 193, 173, 207, 246, 65, 229, 78, 107, 194]);
  }

  nodes {
    [whereOutput] = where(operand_0, operand_2, operand_1, label="");
  }

  outputs { whereOutput; }
}
